# dida365-agent-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_zh.md  docker-compose.yml  pyproject.toml
.claude/skills/: capture-v2-api.md  v2-network-capture.txt
scripts/: oauth_flow.py  smoke_test.py
src/dida365_agent_mcp/: __init__.py  _oauth_flow.py  auth.py  client.py  client_v2.py  config.py  models.py  server.py  server_v2.py
tests/: test_client.py  test_client_v2.py  test_config.py  test_server.py  test_server_v2.py
